--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
   font-family: 'Poppins', sans-serif;
     background-color:rgb(253, 253, 253);
-    font-size: 17px;
+    font-size: 1.05em;
     /* new line I added to center the text and the img*/ 
     text-align: center;
     display: block;
@@ -25,6 +25,7 @@ html { margin-left: calc(100vw - 100%); }
     margin: 24px ;
     line-height: 1.5;
     
+    
 }
 
 
@@ -35,12 +36,14 @@ html { margin-left: calc(100vw - 100%); }
       margin-right: auto;
       /* new line I added to center the text and the img*/ 
       text-align: center;
+      max-width: 40%;
+      
 }
 
 .UDE_LOGO {
   width: 100%;
   margin-top: -10%;
-  position: center;
+  position: top;
   
 }
  
@@ -81,6 +84,7 @@ position: fixed;
 bottom: -100%;
 left: 0;
 right: 0;
+font-size: 1em;
 background: #414141fa;
 color: #f5f6fa;
 padding: 10px 4%;
@@ -92,15 +96,10 @@ z-index:2;
 }
 
 
-.cookie-container.active  {
-    bottom: 0;
-    
-     
-}
+
 .cookie-container.active  {
   bottom: 0;
-  
-   
+ 
 }
 
 .cookie-container a {
@@ -115,11 +114,13 @@ border: none;
 color: black;
 padding: 12px 25px;
 text-align: center;
-font-size: 18px;
+
 margin-bottom: 16px;
 border-radius: 5px;
 cursor: pointer;
 transition: 0.35s;
+font-size: 1.1em;
+
   }
     
 .Accept-btn:hover {
@@ -127,9 +128,9 @@ background-color: #3e8e41ad;
 color: rgb(255, 255, 255);
 transform: translateY(0px);
 transform: scale(1.00);
+font-size: 1.1em;
 }
 
-  
 
 
 .Customise-btn {
@@ -139,19 +140,20 @@ border: none;
 color: rgb(0, 0, 0);
 padding: 12px 22px;
 text-align: center;
-font-size: 18px;
+font-size: 1.1em;
 margin-bottom: 16px;
 margin: 10px;
 border-radius: 5px;
 cursor: pointer;
 transition: 0.35s;
-    
+
   }
 .Customise-btn:hover {
 background-color: #3e8e41ad;
 color: white;
 transform: translateY(0px);
 transform: scale(1.00);
+font-size: 1.1em;
 }
  
 /* Positioning of the Gear "Customise" button */
@@ -164,7 +166,6 @@ img.GearButton {
   height: 55px; 
   z-index: 1;
   transition: all .4s ease;
-  
   
 }
 
@@ -245,12 +246,12 @@ img.GearButton:hover {
       border-radius: 15px;
       box-shadow: 0px 0px 40px rgba(17, 27, 51, 0.76);
       width: 491px;
-      max-height: 70%;
+      max-height: 80%;
       max-width: 30%;
       text-align: center; 
       overflow: hidden;
       overflow-y: scroll;
-      
+     
     }
     .modal a {
       color: #2381d8;
@@ -261,7 +262,7 @@ img.GearButton:hover {
       display: none;
     }
     */
-
+   
    /* Making the vertical Scroll-bar invisible, because it makes the modal look bad */
 .modal::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
@@ -294,20 +295,23 @@ img.GearButton:hover {
       opacity: 1;
       
       
+      
     } 
     
     .modal h1 {
-      font-size: 20px;
+      
       margin: 0;
       color: rgb(0, 0, 0);
-       padding: 0px;   
+       padding: 0px;
+       font-size: 0.8vw;
           
     }
     .modal p {
-      font-size: 15px;
+      font-size: 0.85em;
       opacity: 0.85;
       color: rgb(0, 0, 0);
       padding: 0px;
+      
     }
     /*End of Main Modal */
 
@@ -320,7 +324,7 @@ img.GearButton:hover {
       border-radius: 15px;
       box-shadow: 0px 0px 40px rgba(17, 27, 51, 0.76);
       width: 300px;
-      max-height: 45%;
+      max-height: 60%;
       max-width: 30%;
       text-align: center; 
       overflow: hidden;
@@ -357,20 +361,21 @@ img.GearButton:hover {
   .modal-container2.show {
     pointer-events: auto; 
     opacity: 1;
+    
   
   } 
   .modal2 h1 {
-    font-size: 19.5px;
+    font-size: 1.15em;
     margin-top: -5%;
     color: rgb(0, 0, 0);
      padding: 2px;     
         
   }
   .modal2 p {
-    font-size: 14px;
+    font-size: 0.85em;
     opacity: 0.8;
     color: rgb(0, 0, 0);
-    padding: 0px;
+    padding-top: 0px;
   }
 
 /*End of Additional Modal*/
@@ -414,6 +419,7 @@ img.GearButton:hover {
   border-radius: 12px;
   overflow: hidden;
   margin-top: 0px;
+ 
   
 
 }
@@ -438,7 +444,8 @@ img.GearButton:hover {
 }  
 .accordion.active .content{  
   height: 150px;  
-  padding: 0px;  
+  padding: 0px; 
+  
 
 }  
 .accordion.active .DropdownN1::after, .accordion.active .DropdownN2::after, .accordion.active .DropdownN3::after, .accordion.active .DropdownN4::after, .accordion.active .DropdownN5::after{  
@@ -628,6 +635,7 @@ label input:checked~.labels::before {
 
 /*START Positioning the additional swithches(From the additional pop-up modal)*/
 
+
 .switch_bubbling6 {
   margin-top: 1.9%;
   margin-left: -61%;
@@ -650,7 +658,7 @@ label input:checked~.labels::before {
   margin-left: 97%;
   margin-top: -11.7%;
   display: block;
-  position: relative;
+  position: relativez;
   font-size: 30px;
   overflow: hidden;
   text-decoration: none;
