--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     display: block;
     max-height: 100%;
     
+    
   
   }
   
@@ -158,6 +159,8 @@ font-size: 1.1em;
  
 /* Positioning of the Gear "Customise" button */
 img.GearButton {
+  -webkit-transform: translateZ(0);
+  transform: 0;
   position: fixed;
   opacity: .6;
   bottom: -0px;
@@ -165,8 +168,7 @@ img.GearButton {
   width: 55px;
   height: 55px; 
   z-index: 1;
-  transition: all .4s ease;
-  
+  transition: all .35s ease;
 }
 
 img.GearButton:hover {
